tests/invalid_syntax/test_unexpected_token.aphi
/*
Demonstrates: Invalid use of binary operator
*/

int x;

procedure main {
    x = + + 5;
}
